<resources>
    <string name="app_name">Mall</string>
    <string name="mallStringTitle">天外天商城</string>
    <string name="mallStringStudio">天外天工作室</string>
    <string name="mallStringLatestSale">最新发布</string>
    <string name="mallStringLatestNeed">最新求购</string>
    <string name="mallStringResultSearch">搜索结果</string>
    <string name="mallStringResultSelect">分类结果</string>
    <string name="mallStringMine">我的</string>
    <string name="mallStringMySale">我的发布</string>
    <string name="mallStringMyNeed">我的求购</string>
    <string name="mallStringMyFav">我的收藏</string>
    <string name="mallStringPostSale">我要发布</string>
    <string name="mallStringPostNeed">我要求购</string>
    <string name="mallStringSetting">修改信息</string>
    <string name="mallStringDeleteSale">下架商品</string>
    <string name="mallStringDeleteNeed">下架求购</string>
    <string name="mallStringDeFav">取消收藏</string>
    <string name="mallStringRmb">¥</string>
    <string name="mallStringImg">商品图片</string>
    <string name="mallStringInfo">商品信息</string>
    <string name="mallStringName">商品名称</string>
    <string name="mallStringDetail">商品详情</string>
    <string name="mallStringCampus1">卫津路校区</string>
    <string name="mallStringCampus2">北洋园校区</string>
    <string name="mallStringCampus">校区</string>
    <string name="mallStringLocate">交易地点</string>
    <string name="mallStringBargain">讲价</string>
    <string name="mallStringCategory">分类</string>
    <string name="mallStringStatus">商品成色</string>
    <string name="mallStringExchange">物物交换</string>
    <string name="mallStringEmail">微信</string>
    <string name="mallStringQ">QQ</string>
    <string name="mallStringPhone">手机</string>
    <string name="mallStringBargain0">不可刀</string>
    <string name="mallStringBargain1">可小刀</string>
    <string name="mallStringBargain2">可刀</string>
    <string name="mallStringBla">「联系我时，请说明是在天外天商城看到我的哟」</string>
    <string name="mallStringExpect">期望价格</string>
    <string name="mallStringNull">暂无结果</string>
</resources>
