<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mallColorBgGrey"
    android:orientation="vertical"
    tools:context=".detail.DetailActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_detail_rmb"
                android:layout_toEndOf="@id/tv_detail_rmb"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/mallColorMain"
                android:textSize="20sp"
                tools:text="10000.00" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_rmb"
                android:layout_alignStart="@id/tv_detail_rmb"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:text="【随便什么吧】生旦净末丑 神仙老虎狗 擦桌子扫地 给师娘带孩子" />

            <TextView
                android:id="@+id/tv_detail_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_detail_rmb"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/mallColorTextLight"
                android:textSize="12sp"
                tools:text="2019-06-29 21:30:15" />

            <TextView
                android:id="@+id/tv_detail_campus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_time"
                android:layout_alignEnd="@id/tv_detail_time"
                android:textColor="@color/mallColorTextLight"
                android:textSize="12sp"
                tools:text="北洋园" />

            <TextView
                android:id="@+id/tv_detail_expect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bn_detail_banner"
                android:layout_marginStart="25dp"
                android:layout_marginTop="100dp"
                android:text="@string/mallStringExpect"
                android:textColor="@color/mallColorMain"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_detail_rmb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_expect"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/mallStringRmb"
                android:textColor="@color/mallColorMain"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_detail_two"
                android:layout_alignStart="@id/cv_detail_two"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/mallStringBla"
                android:textColor="@color/mallColorBlueShadow"
                android:textSize="12sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv_detail_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_detail_one"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                app:cardBackgroundColor="@color/mallColorLight"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_detail_seller"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/mall_ic_mine" />

                    <TextView
                        android:id="@+id/tv_detail_qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_detail_phoneT"
                        android:layout_alignStart="@id/tv_detail_phone"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/mallStringQ"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_detail_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_detail_qqT"
                        android:layout_alignStart="@id/tv_detail_phone"
                        android:layout_marginTop="10dp"
                        android:text="@string/mallStringEmail"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_detail_seller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_detail_seller"
                        android:layout_alignStart="@id/iv_detail_seller"
                        android:layout_alignEnd="@id/iv_detail_seller"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        tools:text="Matisse" />

                    <TextView
                        android:id="@+id/tv_detail_phoneT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_detail_phone"
                        android:layout_alignStart="@id/tv_detail_phone"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="#ffffff"
                        android:textIsSelectable="true"
                        android:textSize="18sp"
                        tools:text="12345678912" />

                    <TextView
                        android:id="@+id/tv_detail_qqT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_detail_qq"
                        android:layout_alignStart="@id/tv_detail_phone"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/tv_detail_qq"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="#ffffff"
                        android:textIsSelectable="true"
                        android:textSize="18sp"
                        tools:text="12345678912" />

                    <TextView
                        android:id="@+id/tv_detail_emailT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_detail_email"
                        android:layout_alignStart="@id/tv_detail_phone"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="#ffffff"
                        android:textIsSelectable="true"
                        android:textSize="18sp"
                        tools:text="12345678912" />

                    <TextView
                        android:id="@+id/tv_detail_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_toEndOf="@id/iv_detail_seller"
                        android:text="@string/mallStringPhone"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_detail_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_detail_name"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:id="@+id/iv_detail_fav"
                        android:layout_width="25dp"
                        android:layout_height="27dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/mall_ic_un_fav"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                    <ImageView
                        android:id="@+id/iv_detail_faved"
                        android:layout_width="25dp"
                        android:layout_height="27dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/mall_ic_faved"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <ImageView
                        android:id="@+id/iv_detail_comment"
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/mall_ic_comment"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/iv_detail_fav" />

                    <TextView
                        android:id="@+id/tv_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/mallStringDetail"
                        android:textColor="@color/mallColorPressed"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_detail_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_detail"
                        tools:text="【随便什么吧】生旦净末丑 神仙老虎狗 擦桌子扫地 给师娘带孩子 \n 都~可以\n【随便什么吧】生旦净末丑 神仙老虎狗 擦桌子扫地 给师娘带孩子 \n 都~可以\n【随便什么吧】生旦净末丑 神仙老虎狗 擦桌子扫地 给师娘带孩子 \n 都~可以" />

                    <TextView
                        android:id="@+id/tv_detail_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/mallStringStatus"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="@id/tv_detail_exchange"
                        app:layout_constraintTop_toBottomOf="@id/tv_detail_exchange" />

                    <TextView
                        android:id="@+id/tv_detail_exchange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/mallStringExchange"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="@id/tv_detail_locate"
                        app:layout_constraintTop_toBottomOf="@id/tv_detail_locate" />

                    <TextView
                        android:id="@+id/tv_detail_bargain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/mallStringBargain"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="@id/tv_detail_status"
                        app:layout_constraintRight_toRightOf="@id/tv_detail_status"
                        app:layout_constraintTop_toBottomOf="@id/tv_detail_status" />

                    <TextView
                        android:id="@+id/tv_detail_locate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/mallStringLocate"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="@id/tv_detail_detail"
                        app:layout_constraintTop_toBottomOf="@id/tv_detail_detail" />

                    <TextView
                        android:id="@+id/tv_detail_locateT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="15dp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_detail_locate"
                        app:layout_constraintLeft_toRightOf="@id/tv_detail_locate"
                        app:layout_constraintTop_toTopOf="@id/tv_detail_locate"
                        tools:text="卖家暂未说明" />

                    <TextView
                        android:id="@+id/tv_detail_statusT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:fontFamily="@font/montserrat_regular"
                        app:layout_constraintBottom_toBottomOf="@id/tv_detail_status"
                        app:layout_constraintLeft_toRightOf="@id/tv_detail_status"
                        app:layout_constraintTop_toTopOf="@id/tv_detail_status"
                        tools:text="8成新" />

                    <TextView
                        android:id="@+id/tv_detail_exchangeT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="15dp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_detail_exchange"
                        app:layout_constraintLeft_toRightOf="@id/tv_detail_exchange"
                        app:layout_constraintTop_toTopOf="@id/tv_detail_exchange"
                        tools:text="卖家暂未说明" />

                    <TextView
                        android:id="@+id/tv_detail_bargainT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/tv_detail_bargain"
                        app:layout_constraintLeft_toLeftOf="@id/tv_detail_statusT"
                        app:layout_constraintTop_toTopOf="@id/tv_detail_bargain"
                        tools:text="可小刀" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <com.youth.banner.Banner
                android:id="@+id/bn_detail_banner"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="15dp"
                app:image_scale_type="center_crop" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_detail_back"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/mallColorBgTran"
        app:cardCornerRadius="19dp"
        app:cardElevation="0dp"
        app:layout_scrollFlags="scroll|enterAlways">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mall_ic_back_arrow0" />
    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
